commit zookeeper homework